--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -34,7 +34,8 @@
      <ul>
        <li ng-repeat="item in buyList.items">
          Buy {{ item.quantity }} {{ item.name }}
-         <button class="btn btn-default" ng-click="buyList.buyItem($index)"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+         <button class="btn btn-default" ng-click="buyList.buyItem($index)"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+       </li>
        <!-- <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li> -->
      </ul>
      <div class="emptyMessage" ng-if="!buyList.items[0]">Everything is bought!</div>
